tests/semantic/type_system12/type_system12.err
Error: Head argument is not a subtype of its declared type in file type_system12.dl at line 38
C(x) :- B(x).                      // Error
--^-----------------------------------------
2 errors generated, evaluation aborted
